--- a/Snake201711/Snake201711/Snake201711.csproj
+++ b/Snake201711/Snake201711/Snake201711.csproj
@@ -69,6 +69,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Arena.cs" />
+    <Compile Include="Models\Snake.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
