--- a/Snake201711/Snake201711/Snake201711.csproj
+++ b/Snake201711/Snake201711/Snake201711.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="Models\Arena.cs" />
     <Compile Include="Models\Snake.cs" />
+    <Compile Include="Models\SnakeDirections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
