#2: Kezdőkép első változat hibákkal

--- a/Snake201711/Snake201711/Snake201711.csproj
+++ b/Snake201711/Snake201711/Snake201711.csproj
@@ -74,6 +74,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Arena.cs" />
+    <Compile Include="Models\ArenaSettings.cs" />
+    <Compile Include="Models\GamePoint.cs" />
     <Compile Include="Models\Snake.cs" />
     <Compile Include="Models\SnakeDirections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
